cambie color de texto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1 class="text-center mt-5 display-4 text-secundary">Hello, world! with github pages</h1>
+    <h1 class="text-center mt-5 display-4 text-primary">Hello, world! with github pages</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
