agregue un mensaje para un amigo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1 class="text-center mt-5 display-4 text-primary">Hello, world! with github pages</h1>
+    <h1 class="text-center mt-5 display-4 text-primary">GUSHY JOTO</h1>
+    <h1 class="text-left mt-5 display-4 text-secundary">¿que pedo we, hagamos unas asadas o que?</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
